Starting work over version 1.5.1: IPoint.of, Point.of, IRange.of, Range.of, IRectangularArea.of, RectangularArea.of